# birdybot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  start.bat
bot/: __main__.py  app.py  config.py  scheduler.py
bot/claude/: branch_utils.py  gitpaths.py  models.py  parser.py  provider.py  runner.py  session_index.py  types.py
bot/discord/: __init__.py  access.py  adapter.py  bot.py  channels.py  dashboard.py  fleet.py  formatter.py  forums.py  idle.py  interactions.py  log_triage.py  modals.py  monitoring.py  orchestrator.py  slash_commands.py  spawn_colors.py  tags.py  titles.py  usage_notifier.py  verify_board.py  wizard.py
bot/engine/: __init__.py  auto_fix.py  commands.py  deploy.py  eval.py  lifecycle.py  (+10 more)
scripts/: auth_push.py  discord_read.py  discord_test.py  fetch_x_corpus.py  merge_drill.py  rebuild_session_index.py  recover_thread.py  relaunch.py  restart_bot.bat  schedule.py  scrub_stale_sessions.py  setup.py  smoke_test.py  start_bot.bat  start_bot.vbs  stop_bot.bat  test_account_failover.py  test_ai_title.py  test_branch_scan.py  test_chain_botcmd.py  test_extract_latest_plan_text.py  test_failover_session.py  test_fleet_ship.py  test_halt_text.py  test_merge_msg_is_failure.py  test_model_limit_failover.py  test_model_routing.py  test_multi_spawn.py  test_mutex_drill.py  test_runner_dementia.py  test_runner_watchdog.py  test_spawn_depth_gate.py  test_tag_release.py  test_unattended_nudge.py  test_verify.py  test_wake_directive.py  test_wake_promise.py  test_worktree_recovery_dedupe.py  verify_ceremony.py  verify_chain_meta.py  (+6 more)
(+25 files in other folders)
