[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-bot"
version = "0.63.3"
description = "Discord bot for managing Claude Code CLI instances"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tzdata>=2023.3; sys_platform == 'win32'",
    "cryptography>=42.0",
]

[project.scripts]
claude-bot = "bot.__main__:main"

[tool.setuptools.packages.find]
include = ["bot*"]
